// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нормально отрендериться список табов в листинге all без параметров 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars",
      },
    ]
  }
  pageParams={
    Object {
      "category": "cars",
      "section": "all",
    }
  }
/>
`;

exports[`должен нормально отрендериться список табов в листинге new с маркой 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=new&catalog_filter=mark%3DFORD",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?mark=FORD&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=FORD&section=new",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=FORD&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=FORD",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=FORD&section=new",
      },
    ]
  }
  pageParams={
    Object {
      "catalog_filter": Array [
        Object {
          "mark": "FORD",
        },
      ],
      "category": "cars",
      "section": "new",
    }
  }
/>
`;

exports[`должен нормально отрендериться список табов в листинге new с маркой, моделью, комплектацией 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=new&catalog_filter=mark%3DFORD%2Cmodel%3DFOCUS&complectation_name=Trend",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?mark=FORD&model=FOCUS&category=cars&complectation_name=Trend",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=FORD&section=new",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=FORD&model=FOCUS&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=FORD&model=FOCUS",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=FORD&model=FOCUS&section=new",
      },
    ]
  }
  pageParams={
    Object {
      "catalog_filter": Array [
        Object {
          "mark": "FORD",
          "model": "FOCUS",
        },
      ],
      "category": "cars",
      "complectation_name": "Trend",
      "section": "new",
    }
  }
/>
`;

exports[`должен нормально отрендериться список табов в листинге used с кучей параметров 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?body_type_group=SEDAN&category=cars&configuration_id=4760019&currency=USD&displacement_from=2000&displacement_to=2000&engine_group=GASOLINE&gear_type=FORWARD_CONTROL&has_history=true&section=used&tech_param_id=6283532&top_days=7&transmission=AUTOMATIC",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&configuration_id=4760019&currency=USD&displacement_from=2000&displacement_to=2000&gear_type=FORWARD_CONTROL&has_history=true&tech_param_id=6283532&top_days=7&autoru_body_type=SEDAN&engine_type=GASOLINE&sort_offers=fresh_relevance_1-DESC&transmission_full=AUTO_AUTOMATIC",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=used",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars",
      },
    ]
  }
  pageParams={
    Object {
      "body_type_group": "SEDAN",
      "category": "cars",
      "configuration_id": "4760019",
      "currency": "USD",
      "displacement_from": "2000",
      "displacement_to": "2000",
      "engine_group": "GASOLINE",
      "gear_type": "FORWARD_CONTROL",
      "has_history": "true",
      "section": "used",
      "sort": "fresh_relevance_1-desc",
      "tech_param_id": "6283532",
      "top_days": "7",
      "transmission": "AUTOMATIC",
    }
  }
/>
`;

exports[`должен нормально отрендериться список табов в листинге used с маркой, моделью, поколением 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&catalog_filter=mark%3DFORD%2Cmodel%3DFOCUS%2Cgeneration%3D3483450&section=used",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?mark=FORD&model=FOCUS&super_gen=3483450&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=used",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=FORD&model=FOCUS&super_gen=3483450&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=FORD&model=FOCUS&super_gen=3483450",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=FORD&model=FOCUS&super_gen=3483450&section=used",
      },
    ]
  }
  pageParams={
    Object {
      "catalog_filter": Array [
        Object {
          "generation": "3483450",
          "mark": "FORD",
          "model": "FOCUS",
        },
      ],
      "category": "cars",
      "section": "used",
    }
  }
/>
`;
